# exercises

./: CMakeCache.txt  CMakeLists.txt  Dependencies.cmake  Dockerfile  LICENSE  Makefile  Notes.md  ProjectOptions.cmake  README.md  entrypoint.sh  main.cpp
.devcontainer/: Dockerfile
cmake/: CompilerWarnings.cmake
cpp-refactoring/: Dockerfile  entrypoint.sh  main.cpp
csharp-refactoring/: Program.cs  csharp-refactoring.csproj
include/statement/: genre.hpp  invoice.hpp  performance.hpp  play.hpp  statement.hpp  util.hpp
java-refactoring/: README.md
java-refactoring/src/: Main.java
src/: CMakeLists.txt  main.cpp
src/statement/: CMakeLists.txt  genre.cpp  performance.cpp  play.cpp  statement.cpp  util.cpp
test/: CMakeLists.txt
